# inkblog

./: .gitignore  DOCS-v2.md  INDEX.md  README.md  build_site.py  demo.html  git-commit.sh  implementation-notes.md  ink  ink-v2  install.sh  pyproject.toml  quickstart.sh
.ink/: config.yaml
.kiro/: improvements.md
.kiro/hooks/: auto-git-commit-on-task.kiro.hook
_index/: timeline.json
_site/: feed.xml  index.html
_templates/default/: .abstract  .overview  index.md
_templates/tech-review/: .abstract  .overview  README.md  index.md
_templates/weekly-report/: index.md
agent-skill/: SKILL.md
agent-skill/references/: content-workflow.md  ink-commands.md  sensitive-words.md  three-layer-context.md
agent-skill/scripts/: refresh_context.py
agent-skill/templates/: article-template.md  review-report.md
ink_blog_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ink_core/: __init__.py
ink_core/agent/: __init__.py  journal.py  recall.py  skill_index.py
ink_core/cli/: __init__.py  builtin.py  intent.py  parser.py
ink_core/site/: rss.py  (+3 more)
tests/: conftest.py  test_analyze.py  test_article_manager.py  test_article_status.py  test_engineering_integration.py  test_engineering_properties.py  test_git.py  test_index_manager.py  test_integration.py  test_markdown.py  test_markdown_renderer.py  test_properties.py  test_publish.py  test_publish_history.py  test_search.py  test_site.py  test_skill_executor.py  test_skill_registry.py  test_skills_loader.py  test_slug_resolver.py  test_template_autoescape.py  test_v041_cli_status.py
(+133 files in other folders)
