[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ink-blog-core"
version = "0.1.0"
description = "Ink Blog Core - CLI + Skills + Markdown blog system (Phase 1)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[project.scripts]
ink = "ink_core.cli.parser:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ink_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
