[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ink-blog-core"
version = "0.4.1"
description = "Ink Blog Core - CLI + Skills + Markdown blog system with static site generation"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
pinyin = ["pypinyin>=0.50"]
markdown = ["mistune>=3.0"]
all = ["pypinyin>=0.50", "mistune>=3.0"]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "pypinyin>=0.50",
    "mistune>=3.0",
]

[project.scripts]
ink = "ink_core.cli.parser:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ink_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
